--- a/main/LewaFMRadio.apk/res/values-cs/strings.xml
+++ b/main/LewaFMRadio.apk/res/values-cs/strings.xml
@@ -1,119 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">FM rádio</string>
-    <string name="favorite_manager">Seznam kanálů</string>
-    <string name="add_to_favorite">Add to Favorite</string>
-    <string name="add_to_favorite1">Přidat do přednastavených kanálů</string>
-    <string name="optmenu_search">Hledat</string>
-    <string name="optmenu_exit">Konec</string>
-    <string name="contmenu_title">Operace</string>
-    <string name="contmenu_item_edit">Úpravy</string>
-    <string name="contmenu_item_delete">Odebrat z oblíbených položek</string>
-    <string name="contmenu_item_delete1">Odstranit z předvolených kanálů</string>
-    <string name="dlg_noantenna_text">Potřebujete sluchátka jako anténu. Prosím připojte vaše sluchátka.</string>
-    <string name="dlg_noantenna_title">Zapojte sluchátka</string>
-    <string name="btn_yes">Ano</string>
-    <string name="btn_no">Ne</string>
-    <string name="btn_ok">Ok</string>
-    <string name="btn_cancel">Storno</string>
-    <string name="dlg_progress_title">Hledat</string>
-    <string name="dlg_progress_text">Hledat kanály...</string>
-    <string name="dlg_addedit_station_name">Jméno:</string>
-    <string name="dlg_addedit_station_freq">Frekvence:</string>
-    <string name="dlg_addedit_title_edit">Upravit kanál</string>
-    <string name="default_station_name">Nový kanál</string>
-    <string name="dlg_delete_confirm_title">Potvrďte odebrat z oblíbených položek</string>
-    <string name="dlg_delete_confirm_title1">Potvrdit odebrání z předvolených kanálů</string>
-    <string name="dlg_delete_confirm_text">Jste si jisti, že chcete odstranit tento kanál z oblíbené?</string>
-    <string name="dlg_delete_confirm_text1">Jste si jisti, že chcete odstranit tento kanál z předvolených kanálů?</string>
-    <string name="toast_favorite_full">Kanál nelze přidat do seznamu oblíbených, protože je plný.</string>
-    <string name="toast_favorite_full1">Kanál nelze přidat do seznamu přednastavených kanálů, protože je plný.</string>
-    <string name="toast_already_favorite">Tento kanál je již v seznamu oblíbených.</string>
-    <string name="toast_already_favorite1">Tento kanál je již v seznamu přednastavených kanálů.</string>
-    <string name="toast_channel_deleted">Úspěšně odebrán z oblíbených položek.</string>
-    <string name="toast_channel_deleted1">Úspěšně odebrán z předvolených kanálů.</string>
-    <string name="toast_channel_added">Úspěšně přidáno k oblíbeným položkám.</string>
-    <string name="toast_channel_added1">Úspěšně přidána do přednastavených kanálů.</string>
-    <string name="toast_channel_searched">Vypověděno dostupné kanály:</string>
-    <string name="toast_cannot_search">Nelze vyhledat dostupný kanál.</string>
-    <string name="toast_invalid_frequency">Neplatná frekvence pro aktuální umístění. Platné frekvenční rozsah: 87.5-108.0</string>
-    <string name="toast_invalid_input">Poslední neplatný vstup, je platná hodnota 0 nebo 5.</string>
-    <string name="optmenu_rds_settings">RDS nastavení</string>
-    <string name="dlg_rds_settings_channel_information">Informace o kanálu</string>
-    <string name="dlg_rds_settings_alternative_frequency">Alternativní frekvence</string>
-    <string name="sound_mode">Zvukový režim</string>
-    <string name="more">Více</string>
-    <string name="power">Moc</string>
-    <string name="toast_in_call">FM Radio nelze spustit, když jste v hovoru.</string>
-    <string name="empty_list">Seznam kanálů je prázdný.</string>
-    <string name="fm_recorder_name">FM záznamník</string>
-    <string name="toast_recording_lost_warning">Váš záznam bude ztracena v důsledku odstranění SD!</string>
-    <string name="toast_start_recording">Začněte nahrávat...</string>
-    <string name="toast_sdcard_missing">SD karta chybí!</string>
-    <string name="toast_sdcard_insufficient_space">Nedostatek místa na SD kartu!</string>
-    <string name="toast_recorder_internal_error">Došlo k vnitřní chybě v rekordéru!</string>
-    <string name="toast_player_internal_error">Došlo k vnitřní chybě v přehrávači!</string>
-    <string name="toast_powerup_before_record_warning">Nejprve prosím zapněte FM!</string>
-    <string name="optmenu_record">Záznam FM</string>
-    <string name="btn_save_recording">Uložit</string>
-    <string name="btn_discard_recording">Zahodit</string>
-    <string name="edit_recording_name_hint">Název typu souboru</string>
-    <string name="dlg_save_recording_title">Uložit soubor záznamu</string>
-    <string name="dlg_save_recording_storage_warning">V úložišti není dostatek! Chcete uložit aktuální záznam?</string>
-    <string name="already_exists">již existuje</string>
-    <string name="optmenu_speaker">Reproduktor</string>
-    <string name="optmenu_earphone">Sluchátka</string>
-    <string name="FMR_Freq_text">Freq(MHz)</string>
-    <string name="FMR_Freq_tune">Tune</string>
-    <string name="FMR_Antenna_text">Typ antény</string>
-    <string name="FMR_Antenna_short">Krátká</string>
-    <string name="FMR_Antenna_long">Sluchátka</string>
-    <string name="FMR_Status_text">Stav</string>
-    <string name="FMR_Force_Stereomono_text">Síla sada:</string>
-    <string name="FMR_Status_Stereomono_text">Stereo/Mono:</string>
-    <string name="FMR_Stereomono_stereo">Stereo</string>
-    <string name="FMR_Stereomono_mono">Mono</string>
-    <string name="FMR_Status_Stereomono">zjišťování...</string>
-    <string name="FMR_Status_RSSI_text">RSSI(dBm):</string>
-    <string name="FMR_Status_RSSI">zjišťování...</string>
-    <string name="FMR_Status_Caparray_text">CapArray(pF):</string>
-    <string name="FMR_Status_Caparray">zjišťování...</string>
-    <string name="FMR_RDS_text">RDS</string>
-    <string name="FMR_RDS_Ratio_text">Poměr:</string>
-    <string name="FMR_RDS_Ratio">zjišťování...</string>
-    <string name="FMR_RDS_PS_text">PS:</string>
-    <string name="FMR_RDS_PS">Žádný.</string>
-    <string name="FMR_RDS_RT_text">RT:</string>
-    <string name="FMR_RDS_RT">Žádný.</string>
-    <string name="FMR_Hardware_version">Hardwarová verze</string>
-    <string name="FMR_Chip_ID_text">ID čipu</string>
-    <string name="FMR_Chip_ID">Žádný.</string>
-    <string name="FMR_ECO_Version_text">EKO verze</string>
-    <string name="FMR_ECO_Version">Žádný.</string>
-    <string name="FMR_Patch_Version_text">Patch verze</string>
-    <string name="FMR_Patch_Version">Žádný.</string>
-    <string name="FMR_DSP_Version_text">DSP verze</string>
-    <string name="FMR_DSP_Version">Žádný.</string>
-    <string name="insert_the_headset_prompt">Vložit headset pro poslech rádia.</string>
-    <string name="headset_prompt">Sluchátka výzva</string>
-    <string name="mhz">MHZ</string>
-    <string name="fm">FM</string>
-    <string name="favorite_title">Moje oblíbené</string>
-    <string name="delete_selected">Vybráno %d</string>
-    <string name="delete">Odstranit</string>
-    <string name="deleting">Odstranění</string>
-    <string name="search_station">Automatické hledání stanice</string>
-    <string name="add_favorite_station">Přidat</string>
-    <string name="adding_favorite_station">Přidání</string>
-    <string name="delete_station_confirm">Potvrdit odstranění stanice?</string>
-    <string name="delete_station_title">Odstranit stanice</string>
-    <string name="empty_text">stiskněte tlačítko pod tlačítkem Hledat stanice</string>
-    <string name="accurate_change_frequency_title">Přesná změna frekvence</string>
-    <string name="accurate_change_frequency_hint">Vstupní frekvence na listen(MHZ)</string>
-    <string name="input_frequency_error">Vstupní chyba, prosím vstupní počet 87,5 ~ 108.0</string>
-    <string name="insert_headset_prompt">Tento ubohý signál, zapojte sluchátka mohou zlepšit signál</string>
-    <string name="no_radio_searched">Žádné rádiové vyhledávání</string>
-    <string name="menu_actionbar_selected_items">%s vybráno</string>
-    <string name="menu_multichoice_select_all">Vybrat vše</string>
-    <string name="menu_multichoice_clear_select">Zrušit výběr</string>
+<string name="app_name">Rádio</string>
+<string name="favorite_manager">Seznam kanálů</string>
+<string name="add_to_favorite">Přidat do oblíbených</string>
+<string name="add_to_favorite1">Přidat mezi uložené kanály</string>
+<string name="optmenu_search">Hledat</string>
+<string name="optmenu_exit">Ukončit</string>
+<string name="contmenu_title">Úpravy</string>
+<string name="contmenu_item_edit">Editovat</string>
+<string name="contmenu_item_delete">Odstranit z oblíbených</string>
+<string name="contmenu_item_delete1">Odstranit z uložených kanálů</string>
+<string name="dlg_noantenna_text">Sluchátka jsou použita jako anténa FM rádia. Chcete pokračovat bez sluchátek?</string>
+<string name="dlg_noantenna_title">Připojení sluchátek</string>
+<string name="btn_yes">Ano</string>
+<string name="btn_no">Ne</string>
+<string name="btn_ok">OK</string>
+<string name="btn_cancel">Zrušit</string>
+<string name="dlg_progress_title">Hledat</string>
+<string name="dlg_progress_text">Hledám kanály ...</string>
+<string name="dlg_addedit_station_name">Název:</string>
+<string name="dlg_addedit_station_freq">Frekvence:</string>
+<string name="dlg_addedit_title_edit">Editovat kanál</string>
+<string name="default_station_name">Nový kanál</string>
+<string name="dlg_delete_confirm_title">Potvrdit odstranění z oblíbených</string>
+<string name="dlg_delete_confirm_title1">Potvrdit odstranění z uložených kanálů</string>
+<string name="dlg_delete_confirm_text">Opravdu chcete odstranit tento kanál z oblíbených?</string>
+<string name="dlg_delete_confirm_text1">Opravdu chcete odstranit tento kanál z předvoleb?</string>
+<string name="toast_favorite_full">Nelze přidat kanál do oblíbených, jsou plné.</string>
+<string name="toast_favorite_full1">Nelze přidat kanál do předvoleb, jsou plné.</string>
+<string name="toast_already_favorite">Tento kanál již máte mezi oblíbenými.</string>
+<string name="toast_already_favorite1">Tento kanál již máte mezi předvolenými.</string>
+<string name="toast_channel_deleted">Smazáno z oblíbených.</string>
+<string name="toast_channel_deleted1">Smazáno z předvoleb.</string>
+<string name="toast_channel_added">Přidáno do oblíbených.</string>
+<string name="toast_channel_added1">Přidáno do předvoleb.</string>
+<string name="toast_channel_searched">Nalezené kanály:</string>
+<string name="toast_cannot_search">Nelze vyhledat kanály.</string>
+<string name="toast_invalid_frequency">Neplatná hodnota. Platný rozsah je: 87.5-108.0</string>
+<string name="toast_invalid_input">Neplatný poslední vstup, platná hodnota je 0 nebo 5.</string>
+<string name="optmenu_rds_settings">Nastavení RDS</string>
+<string name="dlg_rds_settings_channel_information">Informace o kanálu</string>
+<string name="dlg_rds_settings_alternative_frequency">Alternativní kmitočet</string>
+<string name="sound_mode">Režim zvuku</string>
+<string name="more">Více</string>
+<string name="power">Vypínač</string>
+<string name="toast_in_call">Nelze spustit FM Rádio během hovoru.</string>
+<string name="empty_list">Seznam kanálů je prázdný.</string>
+<string name="fm_recorder_name">Nahrávání FM</string>
+<string name="toast_recording_lost_warning">Vyjmutím SD karty zratíte nahrávku!</string>
+<string name="toast_start_recording">Nahrávám ..</string>
+<string name="toast_sdcard_missing">Chybí SD karta!!!</string>
+<string name="toast_sdcard_insufficient_space">Nedostatek místa na SD kartě.</string>
+<string name="toast_recorder_internal_error">Chyba při nahrávání!!!</string>
+<string name="toast_player_internal_error">Chyba při přehrávání!!!</string>
+<string name="toast_powerup_before_record_warning">Nejprve spusťte FM rádio!!!</string>
+<string name="optmenu_record">Nahrát FM</string>
+<string name="btn_save_recording">Uložit</string>
+<string name="btn_discard_recording">Zrušit</string>
+<string name="edit_recording_name_hint">Zadejte název souboru</string>
+<string name="dlg_save_recording_title">Uložit nahrávku</string>
+<string name="dlg_save_recording_storage_warning">Nedostatek místa! Chcete uložit aktuální nahrávku?</string>
+<string name="already_exists">Již existuje</string>
+<string name="optmenu_speaker">Reproduktor</string>
+<string name="optmenu_earphone">Sluchátka</string>
+<string name="FMR_Freq_text">Frekvence(MHz)</string>
+<string name="FMR_Freq_tune">Ladit</string>
+<string name="FMR_Antenna_text">Anténa</string>
+<string name="FMR_Antenna_short">Interní</string>
+<string name="FMR_Antenna_long">Sluchátka</string>
+<string name="FMR_Status_text">Stav</string>
+<string name="FMR_Force_Stereomono_text">Vnutit nastavení:</string>
+<string name="FMR_Status_Stereomono_text">Stereo/Mono:</string>
+<string name="FMR_Stereomono_stereo">Stereo</string>
+<string name="FMR_Stereomono_mono">Mono</string>
+<string name="FMR_Status_Stereomono">Zjišťuji ...</string>
+<string name="FMR_Status_RSSI_text">RSSI(dBm):</string>
+<string name="FMR_Status_RSSI">Zjišťuji ...</string>
+<string name="FMR_Status_Caparray_text">Kapacita(pF):</string>
+<string name="FMR_Status_Caparray">Zjišťuji ...</string>
+<string name="FMR_RDS_text">RDS</string>
+<string name="FMR_RDS_Ratio_text">Poměr:</string>
+<string name="FMR_RDS_Ratio">Zjišťuji ...</string>
+<string name="FMR_RDS_PS_text">PS:</string>
+<string name="FMR_RDS_PS">Není</string>
+<string name="FMR_RDS_RT_text">RT:</string>
+<string name="FMR_RDS_RT">Není</string>
+<string name="FMR_Hardware_version">Verze hardware:</string>
+<string name="FMR_Chip_ID_text">Chipset:</string>
+<string name="FMR_Chip_ID">Není</string>
+<string name="FMR_ECO_Version_text">Verze ECO</string>
+<string name="FMR_ECO_Version">Není</string>
+<string name="FMR_Patch_Version_text">Verze patche</string>
+<string name="FMR_Patch_Version">Není</string>
+<string name="FMR_DSP_Version_text">Verze DSP</string>
+<string name="FMR_DSP_Version">Není</string>
+<string name="insert_the_headset_prompt">"Pro poslech rádia připojte sluchátka."</string>
+<string name="headset_prompt">Připojení sluchátek</string>
+<string name="mhz">Mhz</string>
+<string name="fm">FM</string>
+<string name="favorite_title">Oblíbené</string>
+<string name="delete_selected">Vybráno: %d</string>
+<string name="delete">Smazat</string>
+<string name="deleting">Mazání</string>
+<string name="search_station">Automaticky vyhledat stanice</string>
+<string name="add_favorite_station">Přidat</string>
+<string name="adding_favorite_station">Přidávání</string>
+<string name="delete_station_confirm">Opravdu smazat stanici(e)?</string>
+<string name="delete_station_title">Smazat stanici</string>
+<string name="empty_text">Pro hledání stanic stlačte níže umístěné tlačítko</string>
+<string name="accurate_change_frequency_title">Upřesnit změnu frekvence</string>
+<string name="accurate_change_frequency_hint">Zadejte frekvenci k poslechu (MHz)</string>
+<string name="input_frequency_error">Vstupní chyba, zadejte číslo 87.5~108.0</string>
+<string name="insert_headset_prompt">Špatný signál, připojte sluchátka pro jeho zlepšení</string>
+<string name="no_radio_searched">Nenalezeno žádné rádio</string>
+<string name="menu_actionbar_selected_items">Vybráno: %s</string>
+<string name="menu_multichoice_select_all">Vybrat vše</string>
+<string name="menu_multichoice_clear_select">Zrušit výběr</string>
 </resources>
