--- a/main/LewaGallery2.apk/res/values-cs/strings.xml
+++ b/main/LewaGallery2.apk/res/values-cs/strings.xml
@@ -1,32 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-    <string name="bg_replacement_message">"Umístěte přístroj na stabilní povrch a ujistěte se, že není v náhledu žádný pohyb.
+    <string name="bg_replacement_message">"Umístěte přístroj na pevný povrch a ujistěte se, že v náhledu není žádný pohyb.
 Živé efekty se zobrazí v náhledu a video může být zaznamenáno."</string>
-    <string name="hdr_guide_capture">Nepohybujte zařízení během snímání HDR</string>
+    <string name="hdr_guide_capture">Nepohybujte zařízením během snímání HDR</string>
     <string name="mav_dialog_save_failed">Nelze uložit obraz.</string>
-    <string name="pref_video_quality_entry_low">Nízká</string>
-    <string name="pref_video_quality_entry_medium">Střední</string>
-    <string name="pref_video_quality_entry_high">Vysoká</string>
-    <string name="pref_video_quality_entry_fine">Jemné</string>
-    <string name="pref_camera_whitebalance_entry_twilight">Soumrak</string>
-    <string name="pref_camera_whitebalance_entry_shade">Stín</string>
-    <string name="pref_camera_whitebalance_entry_warm_fluorescent">Teplé fluorescenční</string>
-    <string name="pref_camera_edge_default">střední</string>
-    <string name="pref_camera_edge_title">Ostrost</string>
-    <string name="pref_camera_hue_default">střední</string>
-    <string name="pref_camera_hue_title">Odstín</string>
-    <string name="pref_camera_saturation_default">střední</string>
-    <string name="pref_camera_saturation_title">Sytost</string>
-    <string name="pref_camera_brightness_default">střední</string>
-    <string name="pref_camera_brightness_title">Jas</string>
-    <string name="pref_camera_contrast_default">střední</string>
-    <string name="pref_camera_contrast_title">Kontrast</string>
-    <string name="pref_camera_dip_entry_low">Nízká</string>
-    <string name="pref_camera_dip_entry_middle">Střední</string>
-    <string name="pref_camera_dip_entry_high">Vysoká</string>
-    <string name="pref_camera_coloreffect_default">žádný</string>
-    <string name="pref_camera_selftimer_title">Samospoušť</string>
-    <string name="pref_camera_recordaudio_title">Mikrofon</string>
     <string name="panorama_guide_shutter">Stisknutím spouště zahájíte sběr panorama</string>
     <string name="pref_camera_picturesize_ratio_title">Velikost náhledu</string>
     <string name="pref_camera_face_detect_title">Detekce obličeje</string>
@@ -54,7 +31,7 @@
     <string name="pano_dialog_title">Panorama</string>
     <string name="pano_capture_indication">Digitalizace panorama</string>
     <string name="pano_dialog_waiting_previous">Čekání na předchozí panorama</string>
-    <string name="pano_review_saving_indication_str">Ukládání\u0085</string>
+    <string name="pano_review_saving_indication_str">Ukládání...</string>
     <string name="pref_video_effect_title">Efekty</string>
     <string name="effect_none">Žádné</string>
     <string name="effect_goofy_face_squeeze">Zmáčknutí</string>
@@ -82,22 +59,22 @@
     <string name="pref_settings_photo_face_detection">Detekce obličeje</string>
     <string name="pref_settings_photo_continuous_capture">Kontinuální snímek</string>
     <string name="pref_settings_photo_restore">Obnovit výchozí</string>
-    <string name="pref_settings_video_title">Nastavení Videa</string>
+    <string name="pref_settings_video_title">Nastavení videa</string>
     <string name="pref_settings_weather_title">Ukázat počasí</string>
-    <string name="pref_settings_weather_none_data">Žádná Data</string>
+    <string name="pref_settings_weather_none_data">Žádná data</string>
     <string name="pref_settings_close">Zavřít</string>
-    <string name="none_weather_data_tip">Žádné počasí údajů, prosím otevřete systém počasí, aplikace jej aktualizovat!</string>
+    <string name="none_weather_data_tip">Žádná data o počasí, otevřete systémovou aplikaci počasí!</string>
     <string name="crop">Ořezat</string>
     <string name="rotate">Otočit</string>
     <string name="camera_roll_tab">Fotoaparát</string>
-    <string name="phone_pictures_tab">Obrázky telefonu</string>
+    <string name="phone_pictures_tab">Obrázky v telefonu</string>
     <string name="today">Dnes</string>
     <string name="yesterday">Včera</string>
     <string name="tomorrow">Zítra</string>
     <string name="delete_selection_message">Odstranit vybranou položku?</string>
     <string name="menu_actionbar_selected_items">%1$d vybraných</string>
     <string name="deleting">Odstranění</string>
-    <string name="no_video_and_image">Žádná videa a fotografie.</string>
+    <string name="no_video_and_image">Žádná videa či fotografie.</string>
     <string name="no_image">Žádný obrázek</string>
     <string name="no_video">Žádné video</string>
     <string name="duration_timer_format_with_hour">%1$d:%2$d:%3$d</string>
@@ -107,23 +84,24 @@
     <string name="video">Video</string>
     <string name="add_image">Přidat</string>
     <string name="add_success">Přidání úspěšné</string>
-    <string name="not_image_or_video">Ne obrázek nebo video</string>
+    <string name="not_image_or_video">Žádný obrázek či video</string>
     <string name="select_folder">Vybrat alba prezentace</string>
     <string name="setascontact_photo">Nastavit jako kontaktní</string>
     <string name="setas_wallpaper">Nastavit jako tapetu</string>
-    <string name="detail_title">Title: %1$s</string>
+    <string name="detail_title">Název: %1$s</string>
     <string name="app_name">Galerie</string>
-    <string name="loading_video">Nahrávání videa…</string>
-    <string name="loading_image">Nahrávání obrázku…</string>
-    <string name="loading_account">Nahrávání účtu…</string>
-    <string name="loading">Nahrávání…</string>
-    <string name="saving_image">Ukládání obrázku…</string>
-    <string name="filtershow_saving_image">Ukládání obrázku do %1$s…</string>
+    <string name="loading_video">Nahrávání videa...</string>
+    <string name="loading_image">Nahrávání obrázku...</string>
+    <string name="loading_account">Nahrávání účtu...</string>
+    <string name="loading">Nahrávání...</string>
+    <string name="saving_image">Ukládání obrázku...</string>
+    <string name="filtershow_saving_image">Ukládání obrázku do %1$s...</string>
     <string name="save_error">Nelze uložit ořezaný obrázek.</string>
     <string name="crop_label">Ořezat obrázek</string>
     <string name="set_image">Nastavit obrázek jako</string>
-    <string name="wallpaper">Nastavování tapety…</string>
+    <string name="wallpaper">Nastavování tapety...</string>
     <string name="camera_setas_wallpaper">Tapeta</string>
+    <string name="delete">Smazat</string>
     <string name="slideshow">Prezentace</string>
     <string name="details">Podrobnosti</string>
     <string name="details_title">%1$d of %2$d položek:</string>
