--- a/main/LewaPlayer.apk/res/values-cs/strings.xml
+++ b/main/LewaPlayer.apk/res/values-cs/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
     <string name="app_name">Hudba</string>
     <string name="videobrowserlabel">Videa</string>
     <string name="videos_title">Videa</string>
     <string name="no_videos_title">Žádná videa</string>
-    <string name="sdcard_missing_message">Telefon nemá vloženou SD kartu.</string>
+    <string name="sdcard_missing_message">Telefon nemá vloženu SD kartu.</string>
     <string name="durationformatshort">%2$d:%5$02d</string>
     <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
     <string name="title_actionnow">Hudba</string>
@@ -23,7 +23,7 @@
     <string name="unknown_artist_name">Neznámý umělec</string>
     <string name="unknown_album_name">Neznámé album</string>
     <string name="unknown_genre_name">Neznámý žánr</string>
-    <string name="fast_scroll_alphabet">" ABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
+    <string name="fast_scroll_alphabet">" ABCČDĎEÉĚFGHIÍJKLMNŇOÓPQRŘSŠTŤUÚVWXYÝZŽ"</string>
     <string name="working_songs">Skladby...</string>
     <string name="albumsongseparator">,</string>
     <string name="working_albums">Alba...</string>
@@ -43,8 +43,8 @@
     <string name="first_dialog_message">Vyberte složky s hudbou</string>
     <string name="dialog_positive">Ano</string>
     <string name="dialog_negative">Ne</string>
-    <string name="setting_fade_title">Zesílit hlasitost</string>
-    <string name="setting_fade_summary">Snižovat a následně zvýšovat hlasitost při změně skladby</string>
+    <string name="setting_fade_title">Slábnutí hlasitosti</string>
+    <string name="setting_fade_summary">Slábnutí hlasitosti při změně skladby</string>
     <string name="random_count_songs">21 skladeb</string>
     <string name="play_selection">Přehrát</string>
     <string name="add_to_playlist">Přidat do playlistu</string>
@@ -52,7 +52,7 @@
     <string name="ringtone_menu">Nastavit jako vyzváněcí tón</string>
     <string name="share_list">Sdílet playlist</string>
     <string name="random_list_title">Náhodný seznam</string>
-    <string name="favourite_list_title">Nejvíce přehrávané</string>
+    <string name="favourite_list_title">Často hrané</string>
     <string name="confirm">OK</string>
     <string name="delete_confirm_button_text">OK</string>
     <string name="cancel">Zrušit</string>
@@ -76,7 +76,7 @@
     <string name="settings">Nastavení</string>
     <string name="search">Hledat</string>
     <string name="folder">Zdroj</string>
-    <string name="remove_done">> Odstraňování ukončené</string>
+    <string name="remove_done">Odstraňování dokončeno</string>
     <string name="remove">odebrat</string>
     <string name="goto_start">Knihovna</string>
     <string name="choose_folder">Ručně vyberte složky s malými audio soubory</string>
@@ -99,28 +99,20 @@
     <string name="ringtone_set">\"%s\" nastavit jako vyzvánění.</string>
     <string name="delete_album_desc">Celé album \"%s\" bude trvale odstraněno z SD karty</string>
     <string name="delete_album_desc_nosdcard">Celé album \"%s\" bude trvale odstraněno z USB úložiště</string>
-    <string name="delete_artist_desc">Všechny písničky \"%s\" budou trvale odstraněny z SD karty</string>
-    <string name="delete_artist_desc_nosdcard">Všechny písničky \"%s\" budou trvale odstraněny z USB úložiště</string>
-    <string name="delete_genre_desc">Všechny písničky v \"%s\" budou trvale odstraněny z SD karty</string>
-    <string name="delete_genre_desc_nosdcard">Všechny písničky v \"%s\" budou trvale odstraněny z USB úložiště</string>
+    <string name="delete_artist_desc">Všechny skladby \"%s\" budou trvale odstraněny z SD karty</string>
+    <string name="delete_artist_desc_nosdcard">Všechny skladby \"%s\" budou trvale odstraněny z USB úložiště</string>
+    <string name="delete_genre_desc">Všechny skladby v \"%s\" budou trvale odstraněny z SD karty</string>
+    <string name="delete_genre_desc_nosdcard">Všechny skladby v \"%s\" budou trvale odstraněny z USB úložiště</string>
     <string name="setting_backlight_title">Vždy zapnuto</string>
-    <string name="setting_backlight_key">isbacklight</string>
     <string name="setting_backlight_summary">Obrazovka zůstane zapnutá po dobu přehrávání skladby</string>
     <string name="setting_lewaid_title">LeWa ID</string>
-    <string name="setting_lewaid_key">lewaidkey</string>
     <string name="setting_downimg_summary">Obrázek alba a umělce</string>
     <string name="setting_downlrc_title">Získat texty</string>
     <string name="setting_downInfo_title">Stáhne informace o skladbách</string>
     <string name="setting_downlrc_summary">Získat texty</string>
-    <string name="setting_downlrc_key">isdownlrc</string>
     <string name="setting_downimg_title">Získat kresby</string>
-    <string name="setting_downimg_key">isdownimg</string>
-    <string name="setting_downInfo_key">isdownInfo</string>
-    <string name="setting_flowhint_key">isflowhint</string>
-    <string name="setting_filtersongs_key">isfiltersongs</string>
     <string name="setting_download_title">Stažení a Streamování</string>
     <string name="setting_download_summary">Pouze WiFi</string>
-    <string name="setting_download_key">downloadmethod</string>
     <string name="musicsettings">LeWa Player nastavení</string>
     <string name="setting_download">Nastaveni stahování</string>
     <string name="setting_basic">Základní nastavení</string>
@@ -141,7 +133,7 @@
     <string name="eq_setting_ok">OK</string>
     <string name="eq_setting_cansl">Storno</string>
     <string name="eq_current">Aktuální EQ:</string>
-    <string name="about">O LeWa Music Playeru</string>
+    <string name="about">O LeWa Music</string>
     <string name="id3_artist">Umělec</string>
     <string name="id3_track">Titul</string>
     <string name="id3_album">Album</string>
@@ -162,23 +154,16 @@
     <string name="sleep_time_min">1</string>
     <string name="sleep_time_max">90</string>
     <string name="ok">OK</string>
-    <string name="sleep_set">%1$dmin(s)</string>
+    <string name="sleep_set">%1$d min(s)</string>
     <string name="record">mé nahrávky</string>
     <string name="setting_shake_title">Zatřepat pro přeskočení</string>
     <string name="setting_shake_summary">Zatřepáním telefonem se provede přeskočení na další skladbu</string>
-    <string name="setting_shake_key">isshake</string>
     <string name="shake_degree_title">Citlivost třepání</string>
     <string name="shake_degree_summary">Nastavte kolik síly je potřeba</string>
-    <string name="shake_degree_key">shakedegree</string>
-    <string name="setting_fade_key">isfade</string>
     <string name="shake_degree_gentle">Jemně</string>
-    <string name="shake_degree_easy" />
-    <string name="shake_degree_common" />
-    <string name="shake_degree_excited" />
     <string name="shake_degree_force">Drsně</string>
     <string name="setting_show_spectrum">Ukázat spektrální zobrazení</string>
     <string name="setting_show_spectrum_summary">Zobrazení rytmu hudby, zakázání může zlepšit výkon</string>
-    <string name="setting_show_spectrum_key">isShowSpectrum</string>
     <string name="id3_lable">Editovat ID3 skladby</string>
     <string name="more">Více</string>
     <string name="id3_empty">prázdný</string>
@@ -189,12 +174,11 @@
     <string name="emptyplaylist">Playlist je prázdný</string>
     <string name="unknownwidget">Neznámý</string>
     <string name="setting_bg_title">Změna pozadí</string>
-    <string name="setting_bg_key">bgchanging</string>
     <string name="title_folder">Složky</string>
     <string name="title_artist_alltrack">Skladby</string>
     <string name="title_artist_album">Alba</string>
     <string name="title_artist_info">Informace</string>
-    <string name="eq_setting">Equalizer</string>
+    <string name="eq_setting">Ekvalizér</string>
     <string name="artist_blank">" "</string>
     <string name="title_blank">" "</string>
     <string name="music_exit">Konec</string>
@@ -203,7 +187,6 @@
     <string name="download_tip">WiFi není připojeno. Pokud budete pokračovat, mohou vzniknout náklady při užití 3G datových přenosů. Pokračovat?</string>
     <string name="set_network">Nastavit síť</string>
     <string name="no_network_tip">není připojení k sítí pro získání obrázku</string>
-    <string name="getpicfinish" />
     <string name="getpicbreak">Pozastaveno,</string>
     <string name="download_finish" formatted="false">%s staženo %s obrázků celkem. %s obrázků Interpreta, %s obrázků Alb.</string>
     <string name="download_break_hint">Zastavit stahování obrázků?</string>
@@ -213,7 +196,7 @@
     <string name="title_artist_detail">O umělci</string>
     <string name="album_releasedate">Datum vydání:</string>
     <string name="album_intro">O albu</string>
-    <string name="inland">Domovina</string>
+    <string name="inland">Domov</string>
     <string name="hk_tw">Hong Kong a Taiwan</string>
     <string name="west">Evropa</string>
     <string name="japan_korea">Japonsko a Jižní Korea</string>
@@ -226,29 +209,28 @@
     <string name="artist_albumtotal">Počet alb:</string>
     <string name="artist_company">Agentura</string>
     <string name="artist_intro">O umělci</string>
-    <string name="info_loading">Detail o zpěvákovi se načítá ~(@^_^@)~</string>
-    <string name="info_notfound">Detail o zpěvákovi nenalezen -_-#</string>
-    <string name="info_neterror">Zkontrolujte síť -_-!</string>
+    <string name="info_loading">Detail o zpěvákovi se načítá</string>
+    <string name="info_notfound">Detail o zpěvákovi nenalezen</string>
+    <string name="info_neterror">Zkontrolujte síť</string>
     <string name="albumInfo">O Albu</string>
     <string name="artist_detail">O Umělci</string>
-    <string name="notDownInfo">Vybral jste nestahovat informace (*^◎^*)</string>
+    <string name="notDownInfo">Vybral jste nestahovat informace</string>
     <string name="music_online">Online hudba</string>
     <string name="countless_songs">nespočet skladeb</string>
     <string name="search_music">Hledat skladbu</string>
     <string name="onlinedownload">stáhnout</string>
-    <string name="more_content">Více obsahu na vás čeká (*^◎^*)</string>
+    <string name="more_content">Více obsahu na vás čeká</string>
     <string name="online_pause">pauza</string>
     <string name="online_newsongs_delivery">Nové skladby</string>
     <string name="ranklist">List hodnocení</string>
     <string name="hotsinger">Popularita zpěváka</string>
     <string name="hotalbums">Vybrané téma</string>
-    <string name="just_fifty">Pouze jedno sto (⊙_⊙)</string>
-    <string name="five_onetime">Jeden může stahovat pět(∩_∩)</string>
+    <string name="just_fifty">Pouze jedno sto</string>
+    <string name="five_onetime">Jeden může stahovat pět</string>
     <string name="downloaded">existuje</string>
     <string name="download_fail">Stahování selhalo</string>
-    <string name="sd_spaceerror">space_error</string>
     <string name="more_content_loading">Více obsahu se načítá</string>
-    <string name="just_fifity_artists">Pouze padesát(∩_∩)</string>
+    <string name="just_fifity_artists">Pouze padesát</string>
     <string name="songs_loaded">Konec načítání skladby</string>
     <string name="online_downloading">progress</string>
     <string name="special_info">Tématické informace</string>
@@ -257,13 +239,13 @@
     <string name="enter_online_music">začít přehrávat online</string>
     <string name="new_songs_rank">Žebříček nových písní Baidu</string>
     <string name="hot_songs_rank">Žebříček žhavých písní Baidu</string>
-    <string name="just_100_artists">Pouze jedno sto(∩_∩)</string>
+    <string name="just_100_artists">Pouze jedno sto</string>
     <string name="url_notfound">Id skladby není správné</string>
     <string name="network_not_connect">síť není připojená</string>
     <string name="set_firewall">Nastavit přístup sítě</string>
     <string name="network_limited">Síť omezena</string>
-    <string name="networking_limited">Síť omezena ( T___T )</string>
-    <string name="search_fail">Vaše skladba nenalezena ~(@^_^@)~</string>
+    <string name="networking_limited">Síť omezena</string>
+    <string name="search_fail">Vaše skladba nenalezena</string>
     <string name="enter_keys">Vložte název umělce nebo skladby</string>
     <string name="flow_hint">Tok dat</string>
     <string name="filter_songs">Filtrovat hudební soubory do 1 minuty</string>
